--- a/desafios/modulo-02/d012/estilo/style.css
+++ b/desafios/modulo-02/d012/estilo/style.css
@@ -17,7 +17,7 @@
 
 html, body {
     min-height: 100vh;
-    background-color: darkgray;
+    background-color: rgba(169, 169, 169, 0.767);
     font-family: var(--fonte1);
 }
 
